--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ option:hover {
       
         </style>
     <div id="container">
-        <h3 class="Heading">CROWD SURVEILLANCE STREAMS</h3>
+        <h3 class="Heading">CROWD SURVEILLANCE STREAM</h3>
 
         <select name="Crowd" id="crowd">
         </select>
